# Game-Keep

./: .cursorignore  .gitignore  README.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/: alembic.ini  main.py
backend/src/api/: activities.py  auth.py  feed.py  games.py  me.py  user_games.py  users.py
backend/src/conf/: __init__.py  settings.py
backend/src/constants/: activity.py  game.py
backend/src/daos/: activity.py  activity_vote.py
backend/src/daos/auth/: user_dao.py
backend/src/daos/games/: game_comment_dao.py  user_game_dao.py
backend/src/dtos/: auth.py  feed.py  games.py  steam_api.py  users.py
backend/src/infra/: auth.py  db.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 2026_03_15_0134-4da5cc7f9674_created_user_model.py  2026_03_15_0239-74621a214cae_created_user_model.py  2026_03_15_0240-ea90468957dd_add_user_game_table.py  2026_03_15_0302-b81471a09959_base_struct.py  2026_03_15_0328-833905f4189e_add_image_url_steam_url_to_user_game.py  2026_03_15_0330-5b88a21a89fa_rename_steam_url_to_steam_app_id.py  2026_03_15_0404-159bd8d51b19_base_struct.py  2026_03_15_0417-2add9b64a372_add_banner_url_to_user.py  2026_03_15_0420-41bf0c75c003_upload_banner.py  2026_03_15_0501-0d06e7be51d0_add_genres_developers_publishers_to_.py  2026_03_15_0508-a579c82dfcba_user_game_genres_developers_publishers_.py  (+8 more)
backend/src/models/: activity.py  activity_vote.py  base.py  game_comment.py  game_comment_vote.py  user.py  user_game.py
backend/src/utils/: __init__.py  app.py  static.py
docs/: README.md
(+97 files in other folders)
